force-app/main/default/objects/Location_Line__c/Location_Line__c.object-meta.xml
<CustomObject>
    <description>Used to gather all data coming from the Address Portal / API. Including all relevant data for the automatically quote creation.</description>
    <label>Location Line</label>
    <nameField>
        <displayFormat>LL-{0000000}</displayFormat>
        <label>Location Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Location Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>