force-app/main/default/objects/Location_Line__c/fields/Active_Blocking_Line_Present__c.field-meta.xml
<CustomField>
    <fullName>Active_Blocking_Line_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Value comes from POQ Item record</description>
    <label>Active Blocking Line Present</label>
    <type>Checkbox</type>
</CustomField>