force-app/main/default/objects/Location_Line__c/fields/Address_ID__c.field-meta.xml
<CustomField>
    <fullName>Address_ID__c</fullName>
    <label>Address ID</label>
    <type>TextArea</type>
</CustomField>