force-app/main/default/objects/Location_Line__c/fields/Address_Wash_Status__c.field-meta.xml
<CustomField>
    <fullName>Address_Wash_Status__c</fullName>
    <label>Address Wash Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Valid</fullName>
            </value>
            <value>
                <fullName>Not Valid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>