force-app/main/default/objects/Location_Line__c/fields/addressWash_Category__c.field-meta.xml
<CustomField>
    <fullName>addressWash_Category__c</fullName>
    <label>Address Wash Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>