force-app/main/default/objects/Location_Line__c/fields/Municipality_Code__c.field-meta.xml
<CustomField>
    <fullName>Municipality_Code__c</fullName>
    <label>Municipality Code</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>