force-app/main/default/objects/Location_Line__c/fields/No_of_POQ_Items__c.field-meta.xml
<CustomField>
    <fullName>No_of_POQ_Items__c</fullName>
    <label>No of POQ Items</label>
    <summaryForeignKey>POQ_Item__c.Location_Line__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>