force-app/main/default/objects/Location_Line__c/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <label>Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>