force-app/main/default/objects/Location_Line__c/fields/OTC_PriceBookEntryId__c.field-meta.xml
<CustomField>
    <fullName>OTC_PriceBookEntryId__c</fullName>
    <label>OTC PriceBookEntryId</label>
    <length>64</length>
    <type>Text</type>
</CustomField>