force-app/main/default/objects/Location_Line__c/fields/OTC_product__c.field-meta.xml
<CustomField>
    <fullName>OTC_product__c</fullName>
    <label>OTC product</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Subscription_product__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Home_Office_OTC_products</valueSetName>
    </valueSet>
</CustomField>