force-app/main/default/objects/Location_Line__c/fields/OTC_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>OTC_Product_Name__c</fullName>
    <label>OTC Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>