force-app/main/default/objects/Location_Line__c/fields/OTC_Product_Option_ID__c.field-meta.xml
<CustomField>
    <fullName>OTC_Product_Option_ID__c</fullName>
    <label>OTC Product Option ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>