force-app/main/default/objects/Location_Line__c/fields/OTC_Product_Option_Quantity__c.field-meta.xml
<CustomField>
    <fullName>OTC_Product_Option_Quantity__c</fullName>
    <label>OTC Product Option Quantity</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>