force-app/main/default/objects/Location_Line__c/fields/Plug_Technician_Required__c.field-meta.xml
<CustomField>
    <fullName>Plug_Technician_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Plug Technician Required</label>
    <type>Checkbox</type>
</CustomField>