force-app/main/default/objects/Location_Line__c/fields/plugPresentPositiveValidation__c.field-meta.xml
<CustomField>
    <fullName>plugPresentPositiveValidation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>plugPresentPositiveValidation</label>
    <type>Checkbox</type>
</CustomField>