force-app/main/default/objects/Location_Line__c/fields/POQ_Item_Created__c.field-meta.xml
<CustomField>
    <fullName>POQ_Item_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When POQ Item has been created this is true</description>
    <label>POQ Item Created</label>
    <type>Checkbox</type>
</CustomField>