force-app/main/default/objects/Location_Line__c/fields/POQ_ProductOfferingId__c.field-meta.xml
<CustomField>
    <fullName>POQ_ProductOfferingId__c</fullName>
    <label>POQ ProductOfferingId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>