force-app/main/default/objects/Location_Line__c/fields/POQ_ProductOfferingQualificationItemId__c.field-meta.xml
<CustomField>
    <fullName>POQ_ProductOfferingQualificationItemId__c</fullName>
    <label>POQ ProductOfferingQualificationItemId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>