force-app/main/default/objects/Location_Line__c/fields/POQ_Stage__c.field-meta.xml
<CustomField>
    <fullName>POQ_Stage__c</fullName>
    <label>POQ Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Called</fullName>
                <default>true</default>
                <label>Not Called</label>
            </value>
            <value>
                <fullName>Timeout</fullName>
            </value>
            <value>
                <fullName>First Call</fullName>
            </value>
            <value>
                <fullName>Second Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>