force-app/main/default/objects/Location_Line__c/fields/Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The QuoteLine that resulted from this LocationLine.</description>
    <inlineHelpText>The QuoteLine that resulted from this LocationLine.</inlineHelpText>
    <label>Quote Line</label>
    <referenceTo>SBQQ__QuoteLine__c</referenceTo>
    <relationshipLabel>Location Lines</relationshipLabel>
    <relationshipName>Location_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>