force-app/main/default/objects/Location_Line__c/fields/Street_Code__c.field-meta.xml
<CustomField>
    <fullName>Street_Code__c</fullName>
    <label>Street Code</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>