force-app/main/default/objects/Location_Line__c/fields/Subscription_PriceBookEntryId__c.field-meta.xml
<CustomField>
    <fullName>Subscription_PriceBookEntryId__c</fullName>
    <label>Subscription PriceBookEntryId</label>
    <length>64</length>
    <type>Text</type>
</CustomField>