force-app/main/default/objects/Location_Line__c/fields/Subscription_product__c.field-meta.xml
<CustomField>
    <fullName>Subscription_product__c</fullName>
    <label>Subscription product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Home_Office_Subscription_products</valueSetName>
    </valueSet>
</CustomField>