force-app/main/default/objects/Location_Line__c/fields/Subscription_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Product_ID__c</fullName>
    <label>Subscription Product ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>