force-app/main/default/objects/Location_Line__c/fields/Subscription_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Product_Name__c</fullName>
    <label>Subscription Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>