force-app/main/default/objects/Location_Line__c/fields/VAS_PriceBookEntryId__c.field-meta.xml
<CustomField>
    <fullName>VAS_PriceBookEntryId__c</fullName>
    <label>VAS PriceBookEntryId</label>
    <length>64</length>
    <type>Text</type>
</CustomField>