force-app/main/default/objects/Location_Line__c/fields/VAS_product__c.field-meta.xml
<CustomField>
    <fullName>VAS_product__c</fullName>
    <label>VAS product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Home_Office_VAS_products</valueSetName>
    </valueSet>
</CustomField>