force-app/main/default/objects/Location_Line__c/fields/VAS_Product_Gearing__c.field-meta.xml
<CustomField>
    <fullName>VAS_Product_Gearing__c</fullName>
    <label>VAS Product Gearing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>