force-app/main/default/objects/Location_Line__c/fields/VAS_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>VAS_Product_ID__c</fullName>
    <label>VAS Product ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>