force-app/main/default/objects/Location_Line__c/fields/VAS_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>VAS_Product_Name__c</fullName>
    <label>VAS Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>