force-app/main/default/objects/Location_Line__c/fields/VendorProductCatalogId__c.field-meta.xml
<CustomField>
    <fullName>VendorProductCatalogId__c</fullName>
    <label>VendorProductCatalogId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>