force-app/main/default/objects/Location_Line__c/fields/VendorProductCode__c.field-meta.xml
<CustomField>
    <fullName>VendorProductCode__c</fullName>
    <label>VendorProductCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>