force-app/main/default/objects/Location_Line__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Address__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Subscription_product__c</columns>
    <columns>VAS_product__c</columns>
    <columns>OTC_product__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>